# gladiator-bot-reverse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: BotlibSources.cmake
dev_tools/: bootstrap_cmake.py  extract_botlib_contract.py  gladiator.dll.bndb_hlil.txt  package_assets.py
dev_tools/Quake-III-Arena-assets/botfiles/: fw_items.c  ichat.h  items.c  mssccprj.scc  new_chars.h  script.c  syn.c  weapons.c
dev_tools/assets/: chars.txt  fw_aggr.c  fw_items.txt  fw_weap.c  game.h  ichat.h  inv.h  items.txt  match.c  match.txt  rchat.txt  rnd.txt  sounds.txt  syn.c  syn.h  teamplay.txt  weapons.txt
dev_tools/assets/bots/: babe_c.c  babe_i.c  babe_t.c  babe_w.c  bill_c.c  bill_i.c  bill_t.c  bill_w.c  bitch_c.c  bitch_i.c  bitch_t.c  bitch_w.c  byte_c.c  byte_i.c  byte_t.c  byte_w.c  hunk_c.c  hunk_i.c  hunk_t.c  hunk_w.c  java_c.c  java_i.c  (+44 more)
docs/: aas_reachability_mapping.md  ai_movement_state_machines.md  asset_root_search_order.md  bot_debug_commands.md  botlib_ai_function_map.md  parity_testing_guide.md  weight_config_analysis.md
docs/testing/: bspc_cli.md  headless_quake2_parity_check.md  quake2_source_port_testing.md
src/botlib/aas/: CMakeLists.txt  aas_debug.c  aas_debug.h  aas_debug_commands.c  aas_local.h  aas_main.c  aas_map.c  aas_map.h  aas_reach.c  aas_route.c  aas_sound.c  aas_sound.h
src/botlib/ai/: CMakeLists.txt  ai_character.c  ai_dm.c  ai_dm.h  ai_weapon.c  bot_ai.c  bot_ai.h  goal_move_orchestrator.c  goal_move_orchestrator.h
src/botlib/ai/character/: bot_character.c  bot_character.h  characteristics.h
src/botlib/ai/chat/: ai_chat.c  ai_chat.h
src/botlib/ai/ea/: ea_main.c  ea_main.h
src/botlib/ai/goal/: ai_goal.c  ai_goal.h  bot_goal.c  bot_goal.h
src/botlib/ai/move/: ai_move.c  bot_move.c  bot_move.h  mover_catalogue.c  mover_catalogue.h
src/botlib/ai/weapon/: bot_weapon.c  bot_weapon.h
src/botlib/ai/weight/: ai_weight.c  bot_weight.c  bot_weight.h
src/botlib/interface/: CMakeLists.txt  README.md  bot_interface.c  bot_interface.h  bot_interface_assets.h  bot_state.c  bot_state.h  botlib_interface.c  botlib_interface.h
src/botlib_aas/: CMakeLists.txt  aas_debug.c  aas_debug_commands.c  aas_local.h  aas_main.c  aas_map.c  aas_reach.c  aas_route.c  aas_sound.c  aas_sound.h
src/botlib_ai/: CMakeLists.txt  ai_character.c  ai_dm.c  ai_weapon.c  goal_move_orchestrator.c  goal_move_orchestrator.h
src/botlib_ai_character/: bot_character.c  bot_character.h
src/botlib_ai_chat/: ai_chat.c  ai_chat.h
src/botlib_ai_goal/: ai_goal.c  ai_goal.h  bot_goal.c  bot_goal.h
src/botlib_ai_move/: ai_move.c  bot_move.c  mover_catalogue.c  mover_catalogue.h
src/botlib_ai_weapon/: bot_weapon.c  bot_weapon.h
src/botlib_ai_weight/: ai_weight.c  bot_weight.c
src/botlib_common/: CMakeLists.txt  l_assets.h  l_libvar.c  l_log.c  l_precomp.h  l_struct.c  l_struct.h  l_utils.h
src/botlib_ea/: ea_main.c
src/botlib_interface/: bot_interface.c  bot_state.c  bot_state.h  botlib_interface.c
src/botlib_precomp/: l_precomp.c  l_precomp.h  l_script.c
src/q2bridge/: CMakeLists.txt  README.md  aas_translation.c  aas_translation.cpp  aas_translation.h  botlib.h  bridge.c  bridge.h  bridge_config.c  bridge_config.h  update_translator.c  update_translator.cpp  update_translator.h
src/shared/: README.md  bot_types.h  platform_export.h  q_platform.h  q_shared.h
tests/: CMakeLists.txt  README.md
tests/aas/: CMakeLists.txt  test_aas_map.c
tests/ai/: CMakeLists.txt  test_ai_character.c  test_ai_dm.c  test_ai_goal_move.c  test_ai_weapon.c  test_ai_weight.c  test_bot_move.c
tests/bspc/: CMakeLists.txt  test_bsp_builder.cpp  test_legacy_primitives.cpp  test_load_world_state.cpp  test_map_parser.cpp
tests/chat/: CMakeLists.txt  test_bot_chat.c  test_bot_chat_stubs.c
tests/common/: CMakeLists.txt  test_bot_common.c  test_bot_common_precomp_stub.c  test_bot_common_stubs.c
tests/ea/: CMakeLists.txt  test_ea_inputs.c
tests/engine_parity/: README.md  run_engine_parity.py  startup.cfg.in
tests/headless/: run_headless_parity.py
tests/parity/: CMakeLists.txt  README.md  botlib_contract_loader.c  botlib_contract_loader.h  engine_log_harness.py  jsmn.c  jsmn.h  test_aas_debug.c  test_bot_interface.c  test_bot_move.c  test_bridge.c  test_precompiler_lexer.c  test_update_translator.c
tests/parity/engine_logs/: README.md  catalog.json
tests/parity/engine_logs/samples/: dm1_headless_smoke.metadata.json
tests/reference/: botlib_contract.json  precomp_lexer_expectations.h
tests/support/: asset_env.c  asset_env.h
tests/support/assets/bots/: sample_weight.c  sample_weight_expected.w
tests/support/assets/bspc/: brush_primitives.map  csg_room.map  duplicate_brushes.map  liquid_room.map  simple_room.map
tests/support/assets/bspc/golden/bsp2aas/: 2box4.aas.base64
tests/support/assets/bspc/golden/bsp2bsp/: 2box4.bsp.base64  2box4.lin  2box4.prt
tests/support/assets/bspc/golden/bsp_builder/: brush_primitives.bsp.base64  brush_primitives.lin  brush_primitives.prt  csg_room.bsp.base64  csg_room.lin  csg_room.prt  duplicate_brushes.bsp.base64  duplicate_brushes.lin  duplicate_brushes.prt  liquid_room.bsp.base64  liquid_room.lin  liquid_room.prt  simple_room.bsp.base64  simple_room.prt
tests/support/assets/bspc/golden/map2aas/: simple_room.aas.base64  simple_room.lin
tests/tools/: CMakeLists.txt  test_bspc_filesystem.cpp
tools/bspc/: CMakeLists.txt  run_cli_modes.py
tools/bspc/references/: bspc.exe_hlil.txt  bspc.htm
tools/bspc/src/: aas_compiler.cpp  aas_compiler.hpp  aas_tmp.cpp  aas_tmp.hpp  brush.cpp  brush.hpp  brush_bsp.cpp  brush_bsp.hpp  brush_processing.cpp  brush_processing.hpp  bsp_builder.cpp  bsp_builder.hpp  bsp_formats.hpp  bsp_serializers.cpp  bsp_to_map.cpp  bsp_to_map.hpp  csg.cpp  csg.hpp  filesystem_helper.cpp  filesystem_helper.h  leakfile.cpp  leakfile.hpp  legacy_common.cpp  legacy_common.hpp  logging.cpp  logging.hpp  main.cpp  map_parser.cpp  map_parser.hpp  math.cpp  math.hpp  memory.cpp  memory.h  options.hpp  pipelines.cpp  pipelines.hpp  plane.cpp  plane.hpp  portals.cpp  portals.hpp  (+13 more)
(+109 files in other folders)
